finished stretch - added fixed navigation with opacity

--- a/css/index.css
+++ b/css/index.css
@@ -165,8 +165,10 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #F6F6F6;
+  background-color: rgba(246, 246, 246, 0.822);
   border-bottom: 2px solid #F1F1F1;
+  position: fixed;
+  width: 100%;
 }
 nav .main-title {
   font-size: 4rem;
@@ -177,6 +179,7 @@ nav .nav-links {
   min-width: 400px;
   justify-content: space-between;
   padding: 10px 0;
+  font-weight: 600;
 }
 @media (max-width: 500px) {
   nav .nav-links {
@@ -190,7 +193,7 @@ nav .nav-links a {
 }
 footer {
   color: #81848E;
-  background: #F6F6F6;
+  background: rgba(246, 246, 246, 0.822);
   padding: 20px 0;
   border: 1px double #e0e0e0;
   border-radius: 10px;
@@ -204,6 +207,7 @@ footer {
 .home .intro img {
   border-radius: 5px;
   width: 100%;
+  margin-top: 100px;
 }
 .home .intro h2 {
   padding: 15px;
