--- a/less/home-page.less
+++ b/less/home-page.less
@@ -9,6 +9,8 @@
     img {
       border-radius: 5px;
       width: 100%;
+      margin-top: 100px;
+
     }
 
     h2 {
